--- a/UnityDissolve.Editor.csproj
+++ b/UnityDissolve.Editor.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5DDEF78F-3298-4583-ADF8-21421E4B29F9}</ProjectGuid>
+    <ProjectGuid>{DB11460F-9B28-4775-A1CC-348504748721}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>UnityDissolve</RootNamespace>
-    <AssemblyName>UnityDissolve</AssemblyName>
+    <AssemblyName>UnityDissolve.Editor</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin\Debug.Editor\</OutputPath>
     <DefineConstants>TRACE;DEBUG;NET35</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -27,7 +27,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin\Release.Editor\</OutputPath>
     <DefineConstants>TRACE;NET35</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -40,15 +40,14 @@
       <HintPath>$(SolutionDir)Libraries\UnityEngine\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEditor">
+      <HintPath>$(SolutionDir)Libraries\UnityEngine\UnityEditor.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\DissolvedType.cs" />
-    <Compile Include="src\DissolveEx.cs" />
-    <Compile Include="src\Attributes\ComponentAttribute.cs" />
-    <Compile Include="src\DissolveTypeCache.cs" />
-    <Compile Include="src\GameObjectEx.cs" />
-    <Compile Include="src\TransformEx.cs" />
+    <Compile Include="Properties\AssemblyInfo.Editor.cs" />
+    <Compile Include="src.editor\DissolvedObjectEditor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Libraries\SystemEx\SystemEx.csproj">
