Added DissolveInEditorAttribute and Editor Dissolve menu items. Updated the documentation.

--- a/UnityDissolve.csproj
+++ b/UnityDissolve.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Attributes\DissolveInEditorAttribute.cs" />
     <Compile Include="src\DissolvedType.cs" />
     <Compile Include="src\DissolveEx.cs" />
     <Compile Include="src\Attributes\ComponentAttribute.cs" />
