--- a/UnityDissolve.Editor.csproj
+++ b/UnityDissolve.Editor.csproj
@@ -54,6 +54,11 @@
       <Project>{0271e27f-e614-4b0f-af16-05d2d2781b7f}</Project>
       <Name>SystemEx</Name>
     </ProjectReference>
+    <ProjectReference Include="UnityDissolve.csproj">
+      <Project>{5ddef78f-3298-4583-adf8-21421e4b29f9}</Project>
+      <Name>UnityDissolve</Name>
+      <Private>False</Private>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
