--- a/UnityDissolve.Editor.csproj
+++ b/UnityDissolve.Editor.csproj
@@ -37,11 +37,11 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="UnityEngine">
-      <HintPath>$(SolutionDir)Libraries\UnityEngine\UnityEngine.dll</HintPath>
+      <HintPath>$(SolutionDir)Libraries\UnityAssemblies\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEditor">
-      <HintPath>$(SolutionDir)Libraries\UnityEngine\UnityEditor.dll</HintPath>
+      <HintPath>$(SolutionDir)Libraries\UnityAssemblies\UnityEditor.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
@@ -50,9 +50,10 @@
     <Compile Include="src.editor\DissolvedObjectEditor.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Libraries\SystemEx\SystemEx.csproj">
+    <ProjectReference Include="$(SolutionDir)Libraries\SystemEx\SystemEx.csproj">
       <Project>{0271e27f-e614-4b0f-af16-05d2d2781b7f}</Project>
       <Name>SystemEx</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="UnityDissolve.csproj">
       <Project>{5ddef78f-3298-4583-adf8-21421e4b29f9}</Project>
