Resource loading attribute.

--- a/UnityDissolve.csproj
+++ b/UnityDissolve.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Attributes\DissolveInEditorAttribute.cs" />
-    <Compile Include="src\Attributes\ResourceAttributecs.cs" />
+    <Compile Include="src\Attributes\ResourceAttribute.cs" />
     <Compile Include="src\DissolvedType.cs" />
     <Compile Include="src\DissolveEx.cs" />
     <Compile Include="src\Attributes\ComponentAttribute.cs" />
