--- a/UnityDissolve.Test.csproj
+++ b/UnityDissolve.Test.csproj
@@ -38,7 +38,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="UnityEngine">
-      <HintPath>$(SolutionDir)Libraries\UnityEngine\UnityEngine.dll</HintPath>
+      <HintPath>$(UNITYEDITOR_PATH)\Data\Managed\UnityEngine.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
