fixed asmdef for unity 2019.

--- a/src.examples/ignore.asmdef
+++ b/src.examples/ignore.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "UnityDissolve.Examples",
+    "name": "dc84be46-3db1-418b-a586-53b2147e8ebd",
     "references": [
         "UnityDissolve"
     ],
