--- a/src.test/ignore.asmdef
+++ b/src.test/ignore.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "UnityDissolve.Test",
+    "name": "37f81c9d-6fd8-4eb5-9e5b-0bde756c06b2",
     "references": [
         "UnityDissolve"
     ],
