--- a/src.examples/ignore.asmdef
+++ b/src.examples/ignore.asmdef
@@ -1,20 +1,29 @@
 {
     "name": "dc84be46-3db1-418b-a586-53b2147e8ebd",
-    "references": [
-        "UnityDissolve"
-    ],
-    "optionalUnityReferences": [
-        "TestAssemblies"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [
         "Android",
         "Editor",
         "iOS",
         "LinuxStandalone64",
+        "Lumin",
         "macOSStandalone",
+        "PS4",
+        "Stadia",
+        "Switch",
+        "tvOS",
+        "WSA",
+        "WebGL",
         "WindowsStandalone32",
-        "WindowsStandalone64"
+        "WindowsStandalone64",
+        "XboxOne"
     ],
-    "allowUnsafeCode": false
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [],
+    "autoReferenced": false,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
